--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
                                     <span class="brand__awesome">Awesome</span>
                                     <span class="brand__store">Store</span>
                                 </div>
+                                <div class="button">
+                                    <a href="" class="button__started"
+                                        >Started</a
+                                    >
+                                    <img
+                                        class="button__bullets"
+                                        src="/img/bullets.png"
+                                        alt="bullets"
+                                    />
+                                </div>
+                                <div class="decor__left"></div>
                             </div>
                             <div class="main__column">
                                 <div class="description">
@@ -62,6 +73,7 @@
                                         quae beatae.
                                     </p>
                                 </div>
+                                <div class="decor__right"></div>
                             </div>
                         </div>
                     </div>
