--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="header__container _container">
                     <div class="top-logo logo">
                         <a href="" class="logo__link">
-                            <img src="/img/logo_top.png" alt="logo" />
+                            <img src="img/logo_top.png" alt="logo" />
                             <span>your logo</span></a
                         >
                     </div>
