fix some css issues

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                                     <span class="brand__awesome">Awesome</span>
                                     <span class="brand__store">Store</span>
                                 </div>
-                                <div class="button">
-                                    <a href="" class="button__started"
+                                <div class="button__block">
+                                    <a href="" class="button__block-started"
                                         >Started</a
                                     >
                                     <img
-                                        class="button__bullets"
+                                        class="button__block-bullets"
                                         src="/img/bullets.png"
                                         alt="bullets"
                                     />
@@ -79,9 +79,6 @@
                     </div>
                 </section>
             </main>
-
-            <div class="button"></div>
-            <div class="brackets"></div>
         </div>
     </body>
 </html>
